# search-engine

./: .env  .env_example  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: ci.yaml  docker-compose-ci.yaml
backend/: Dockerfile  README.md  go.mod  main.go
crawler/: .air.toml  Dockerfile  README.md  go.mod  main.go
db/postgres/: init.sh  init.sql
db/redis/: redis.conf
docs/: crawler_indexer_contract.md  crawler_search_core_contract.md
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
indexer/: Cargo.toml  Dockerfile  README.md
indexer/src/: consumer.rs  errors.rs  indexer.rs  lib.rs  main.rs
monitoring/prometheus/: prometheus.yaml
search-core/: Cargo.toml  Dockerfile  README.md
search-core/src/: consumer.rs  indexer.rs  main.rs  models.rs  storage.rs
