[package]
name = "search-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
jsonschema = "0.33.0"
lapin = "3.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockall = "0.13.1"
proptest = "1.9.0"
